<resources>
    <string name="app_name">Wordy</string>
    <string name="wordy">Wordy</string>
    <string name="enter_the_name">Enter the Name</string>
    <string name="enter_the_age">Enter the Age</string>
    <string name="enter_the_phone_number">Enter the Phone number</string>
    <string name="enter_the_height">Enter the height</string>
    <string name="submit">Submit</string>
    <string name="clear">Clear</string>
    <string name="show">Show</string>
    <string name="name">Name :</string>
    <string name="textview">TextView</string>
    <string name="age">Age :</string>
    <string name="height">Height :</string>
    <string name="showing_the_data">Showing the Data</string>
</resources>