<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Gray"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="50dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/wordy"
            android:textSize="70sp"
            android:textStyle="bold|normal"
            android:gravity="center"
            android:fontFamily="cursive"
            android:textColor="@color/NavyBlue"/>
        <EditText
            android:id="@+id/NameTV"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/enter_the_name"
            android:textColorHint="@color/Gray"
            android:background="@drawable/custom_edittext"
            android:textSize="30sp"
            android:textColor="@color/NavyBlue"
            android:fontFamily="serif"
            android:padding="10dp"/>
        <EditText
            android:id="@+id/AgeTV"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textColorHint="@color/Gray"
            android:background="@drawable/custom_edittext"
            android:hint="@string/enter_the_age"
            android:textSize="30sp"
            android:fontFamily="serif"
            android:textColor="@color/NavyBlue"
            android:padding="10dp"/>
        <EditText
            android:id="@+id/PhoneTV"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textColorHint="@color/Gray"
            android:background="@drawable/custom_edittext"
            android:hint="@string/enter_the_phone_number"
            android:textSize="30sp"
            android:fontFamily="serif"
            android:textColor="@color/NavyBlue"
            android:padding="10dp"/>
        <EditText
            android:id="@+id/HeightTV"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/custom_edittext"
            android:hint="@string/enter_the_height"
            android:textColorHint="@color/Gray"
            android:textSize="30sp"
            android:fontFamily="serif"
            android:textColor="@color/NavyBlue"
            android:padding="10dp"/>
        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/submit"
            android:textSize="50sp"
            android:textStyle="bold|normal"
            android:textColor="@color/Gray"
            android:background="@drawable/custom_button"
            android:fontFamily="serif-monospace"
            app:cornerRadius="50dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btnClear"
                android:layout_width="165dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/clear"
                android:textSize="25sp"
                android:textStyle="bold|normal"
                android:textColor="@color/Gray"
                android:background="@drawable/custom_button"
                android:fontFamily="serif-monospace"
                />
            <Button
                android:id="@+id/btnShowthe"
                android:layout_width="165dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/show"
                android:textSize="25sp"
                android:textStyle="bold|normal"
                android:textColor="@color/Gray"
                android:background="@drawable/custom_button"
                android:fontFamily="serif-monospace"
                />
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="Thank You!!"
            android:textSize="25sp"
            android:textStyle="bold|normal"
            android:gravity="center"
            android:fontFamily="cursive"
            android:textColor="@color/NavyBlue"/>
    </LinearLayout>
</ScrollView>